Add API to update brand's state
